# selma

./: .cross_rubies  .gitattributes  .gitignore  .gitmodules  .rubocop.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Gemfile  README.md  Rakefile  entrypoint.sh  ok.rb  selma.gemspec
.github/: dependabot.yml  tag_and_release.yml
docker/: rust-wrapper.sh
ext/selma/: Cargo.toml  _cflags.rb  _lolhtml.rb  _util.rb  extconf.rb  selma.c  selma.h  selma_element_rb.c  selma_element_rb.h  selma_html.c  selma_html.h  selma_perf.c  selma_perf.h  selma_rewriter.c  selma_rewriter.h  selma_sanitizer.c  selma_sanitizer.h  selma_sanitizer_rb.c  selma_sanitizer_rb.h  selma_selector_rb.c  selma_selector_rb.h  selma_utils.c  selma_utils.h  utarray_utils.c  utarray_utils.h  uthash_utils.h
ext/selma/entities/: entities.c  entities.h
ext/selma/houdini/: houdini.h  houdini_href_e.c  houdini_html_e.c  houdini_html_u.c  utf8.c  utf8.h
ext/selma/liblolhtml/: liblolhtml.dylib
ext/selma/nokogiri-gumbo-parser/: tag_lookup.c
ext/selma/src/: html.rs  lib.rs  native_ref_wrap.rs  rewriter.rs  sanitizer.rs  selector.rs  tags.rs  wrapped_struct.rs
ext/selma/src/html/: element.rs  end_tag.rs  text_chunk.rs
lib/: selma.rb
rakelib/: benchmark.rake  check.rake  clean.rake  compile.rake  dependencies.rake  extension.rake  extensions.rake  lint.rake  nokogiri.rake  package.rake  set-version-to-timestamp.rake  test.rake
script/: bootstrap  docker_build  generate_changelog  test-gem-build  test-gem-file-contents  test-gem-install  test-gem-installation  update_submodules  valgrind
(+46 files in other folders)
