[package]
name = "selma"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[dependencies]
enum-iterator = "2.1"
escapist = "0.0.2"
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = { version = "*", default-features = false, features = [
    "stable-api-compiled-fallback",
] }
lol_html = "1.2"

[lib]
name = "selma"
crate-type = ["cdylib"]
